versioned_docs/version-0.1.0/learn/dapper/dapper-video.md
---
id: dapper-video
title: MLAPI Tutorial Videos
---

This section aims to collate a series of Multiplayer Unity Networking tutorial videos that teach various concepts of the new Unity Official Multiplayer solution MLAPI, all made by Dapper Dino. Learn more about Dapper Dino and his [Youtube channel](https://www.youtube.com/channel/UCjCpZyil4D8TBb5nVTMMaUw) and don't forget to click the subscribe button.

:::important
These tutorials use Unity v2021.1. Future versions of Unity, Unity MLAPI, and Boss Room may have changes and updates to APIs and features.
:::

<div class="table-columns-plain">

|<div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="makeamultiplayergame">Make a Multiplayer Game</a></div>| 
| --- | 
| Dapper teaches you all about the new official Unity multiplayer solution and how to get it set up quickly in your own project!  | 
</div>

<div class="table-columns-plain">

 
|<div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="lobbypassword">Lobby Password</a></div>| <div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="bossroomsample"> Boss Room Sample</a></div>| <div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="dapper-rpcs"> RPC's</a></div>|
| --- | --- |--- |
| Dapper teaches you how to implement connection approval so that clients have to send the correct password to be able to connect to the server | Dapper teaches you all about the new official Unity multiplayer solution and how to get set up with the brand new Boss Room sample project! |Dapper teaches you how to implement Remote Procedure Calls (RPCs) to communicate between Clients and the Server.| 
</div>

<div class="table-columns-plain">

|<div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="dapper-networkvariables">NetworkVariables</a></div>| <div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="dapper-objectspawning"> Object Spawning </a></div>| <div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="dapper-playernames">Player Names</a></div>|
| --- | --- |--- |
|Dapper teaches you how to implement Remote Procedure Calls (RPCs) to communicate between Clients and the Server.| Dapper teaches you how to implement Network Variables to sync data between Clients and the Server.| Dapper teaches you how to implement player names. |

</div>

<div class="table-columns-plain">

|<div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="lobbycreation">Lobby Creation</a></div>| <div class="buttons-pages"><a class="button button--outline button--secondary button--lg" href="dapper-variable-permissions">Variable-Permissions</a></div> | --- |
| --- | --- |--- |
|Dapper teaches you how to create your own lobby where players can join and ready up before starting a match.| Dapper teaches you how to make data private for specific clients which is useful in many cases, such as keeping your hand hidden in a card game | --- |

</div>



:::contribution Community Contribution
Thank you to [DapperDino](https://www.youtube.com/channel/UCjCpZyil4D8TBb5nVTMMaUw) for the video tutorials! These contributions are a fantastic help to the community.
:::

import Iframe from 'react-iframe'
